AC_INIT(Makefile.in)
AC_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_EXEEXT
AX_CPP_IDENT

AX_ENABLE_SUFFIX

AC_CHECK_HEADERS(malloc.h)

AC_CHECK_SIZEOF(unsigned long long)
AC_CHECK_SIZEOF(unsigned long)
AC_CHECK_SIZEOF(unsigned)

# may modify CPPFLAGS and CFLAGS
AX_CPP_PRECOMP

# Compiler option for position independent code, needed when making shared objects.
AX_C_PICFLAG

AC_SUBST(EXEEXT)
AC_SUBST(EXTRALIBS)

AC_OUTPUT(Makefile)
