AC_INIT(Makefile.in)
AC_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_EXEEXT
AX_CPP_IDENT

# vvp32 is by default disabled
#enable_vvp32=no
AC_SUBST(enable_vvp32)

AX_ENABLE_SUFFIX

AC_CHECK_HEADERS(malloc.h)

AC_CHECK_SIZEOF(unsigned long long)
AC_CHECK_SIZEOF(unsigned long)
AC_CHECK_SIZEOF(unsigned)

# may modify CPPFLAGS and CFLAGS
AX_CPP_PRECOMP

# Compiler option for position independent code, needed when making shared objects.
AX_C_PICFLAG

AC_SUBST(EXEEXT)
AC_SUBST(EXTRALIBS)

# If not otherwise specified, set the libdir64 variable
# to the same as libdir.
AC_MSG_CHECKING(for libdir64 path)
if test x${libdir64} = x
then
	libdir64="${libdir}"
fi
AC_SUBST(libdir64)
AC_MSG_RESULT(${libdir64})

AC_OUTPUT(Makefile)
