dnl Process this file with autoconf to produce a configure script.
AC_INIT(fpga.c)

dnl Checks for programs.
AC_PROG_CC

AC_PROG_INSTALL

AC_CANONICAL_HOST
# $host

AC_CYGWIN
AC_SUBST(CYGWIN)
AC_CHECK_HEADERS(malloc.h)

# Darwin requires -no-cpp-precomp
case "${host}" in
    *-*-darwin*)
	CPPFLAGS="-no-cpp-precomp $CPPFLAGS"
	CFLAGS="-no-cpp-precomp $CFLAGS"
	;;
esac

# The -fPIC flag is used to tell the compiler to make position
# independent code. It is needed when making shared objects.

AC_MSG_CHECKING("for flag to make position independent code")
PICFLAG=-fPIC
case "${host}" in

     *-*-cygwin*)
	PICFLAG=
	;;

     *-*-hpux*)
	PICFLAG=+z
	;;

esac
AC_SUBST(PICFLAG)
AC_MSG_RESULT($PICFLAG)

AC_MSG_CHECKING("for shared library link flag")
shared=-shared
case "${host}" in

     *-*-cygwin*)
	shared="-shared -Wl,--enable-auto-image-base"
	;;

     *-*-hpux*)
	shared="-b"
	;;

     *-*-darwin1.[0123])
	shared="-bundle -undefined suppress"
	;;

     *-*-darwin*)
	shared="-bundle -undefined suppress -flat_namespace"
	;;

esac
AC_SUBST(shared)
AC_MSG_RESULT($shared)

AC_MSG_CHECKING("for Win32")
WIN32=no
case "${host}" in

     *-*-cygwin*)
	WIN32=yes
	;;
esac
AC_SUBST(WIN32)
AC_MSG_RESULT($WIN32)


AC_MSG_CHECKING("for ident support in C compiler")
ident_support='-DHAVE_CVS_IDENT=1'
case "${host}" in

     *-*-cygwin*)
	ident_support=
	;;

     *-*-darwin*)
	ident_support=
	;;

     *-*-machten*)
	ident_support=
	;;
esac

AC_SUBST(ident_support)
AC_MSG_RESULT($ident_support)


AC_OUTPUT(Makefile)
