dnl Process this file with autoconf to produce a configure script.
AC_INIT(fpga.c)

dnl Checks for programs.
AC_PROG_CC

AC_PROG_INSTALL

AC_CANONICAL_HOST
# $host

AX_ENABLE_SUFFIX

# Combined check for Microsoft-related bogosities; sets WIN32 if found
AX_WIN32

AC_CHECK_HEADERS(malloc.h)

# may modify CPPFLAGS and CFLAGS
AX_CPP_PRECOMP

# Compiler option for position independent code, needed when making shared objects.
AX_C_PICFLAG

# linker options when building a shared library
AX_LD_SHAREDLIB_OPTS

AC_OUTPUT(Makefile)
