dnl Process this file with autoconf to produce a configure script.
AC_INIT(vvp.c)

dnl Checks for programs.
AC_PROG_CC

AC_PROG_INSTALL

AC_CANONICAL_HOST
# $host

AC_CYGWIN
AC_SUBST(CYGWIN)

# The -fPIC flag is used to tell the compiler to make position
# independent code. It is needed when making shared objects.

AC_MSG_CHECKING("for flag to make position independent code")
PICFLAG=-fPIC
case "${host}" in

     *-*-cygwin*)
	PICFLAG=
	;;

     *-*-hpux*)
	PICFLAG=+z
	;;

esac
AC_SUBST(PICFLAG)
AC_MSG_RESULT($PICFLAG)

AC_MSG_CHECKING("for shared library link flag")
shared=-shared
case "${host}" in

     *-*-cygwin*)
        shared="-mdll -Wl,--enable-auto-image-base"
	if test $ac_cv_mingw32 = yes; then
	    shared="-shared -Wl,--enable-auto-image-base"
	fi
	;;

     *-*-hpux*)
	shared="-b"
	;;

esac
AC_SUBST(shared)
AC_MSG_RESULT($shared)

AC_MSG_CHECKING("for Win32")
WIN32=no
case "${host}" in

     *-*-cygwin*)
	WIN32=yes
	;;
esac
AC_SUBST(WIN32)
AC_MSG_RESULT($WIN32)


AC_OUTPUT(Makefile)
