dnl Process this file with autoconf to produce a configure script.
AC_INIT(vvp.c)
AC_CONFIG_HEADER(vvp_config.h)

dnl Checks for programs.
AC_PROG_CC

AC_PROG_INSTALL

AC_CANONICAL_HOST
# $host

# Combined check for Microsoft-related bogosities; sets WIN32 if found
AX_WIN32

AC_CHECK_HEADERS(malloc.h)

# Do some operating system specific setup.
case "${host}" in
    *-*-darwin*)
	CPPFLAGS="-no-cpp-precomp $CPPFLAGS"
	CFLAGS="-no-cpp-precomp $CFLAGS"
	;;

    *-*-linux*)
	AC_DEFINE(_LARGEFILE_SOURCE)
	AC_DEFINE(_LARGEFILE64_SOURCE)
	;;
esac

AC_CHECK_FUNCS(fopen64)

# The -fPIC flag is used to tell the compiler to make position
# independent code. It is needed when making shared objects.

AC_MSG_CHECKING("for flag to make position independent code")
PICFLAG=-fPIC
case "${host}" in

     *-*-cygwin*)
	PICFLAG=
	;;

     *-*-hpux*)
	PICFLAG=+z
	;;

esac
AC_SUBST(PICFLAG)
AC_MSG_RESULT($PICFLAG)

AC_MSG_CHECKING("for shared library link flag")
shared=-shared
case "${host}" in

     *-*-cygwin*)
	shared="-shared -Wl,--enable-auto-image-base"
	;;

     *-*-hpux*)
	shared="-b"
	;;

     *-*-darwin1.[0123])
	shared="-bundle -undefined suppress"
	;;

     *-*-darwin*)
	shared="-bundle -undefined suppress -flat_namespace"
	;;

esac
AC_SUBST(shared)
AC_MSG_RESULT($shared)

AX_CPP_IDENT

AC_OUTPUT(Makefile)
