dnl Process this file with autoconf to produce a configure script.
AC_INIT(vvp.c)
AC_CONFIG_HEADER(vvp_config.h)

dnl Checks for programs.
AC_PROG_CC

AC_PROG_INSTALL

AC_CANONICAL_HOST
# $host

AX_ENABLE_SUFFIX

# Combined check for Microsoft-related bogosities; sets WIN32 if found
AX_WIN32

AC_CHECK_HEADERS(malloc.h stdint.h inttypes.h)

# may modify CPPFLAGS and CFLAGS
AX_CPP_PRECOMP

# Do some more operating system specific setup.
case "${host}" in
    *-*-linux*)
	AC_DEFINE([_LARGEFILE_SOURCE], [1], [Indicates LFS (i.e. the ability to create files larger than 2 GiB on 32-bit operating systems).])
	AC_DEFINE([_LARGEFILE64_SOURCE], [1], [Indicates LFS (i.e. the ability to create files larger than 2 GiB on 32-bit operating systems).])
	;;
esac

AC_CHECK_FUNCS(fopen64)

# Compiler option for position independent code, needed when making shared objects.
AX_C_PICFLAG

# linker options when building a shared library
AX_LD_SHAREDLIB_OPTS

AC_OUTPUT(Makefile)
